Vehicle detail page

--- a/views/vehicleDetail.pug
+++ b/views/vehicleDetail.pug
@@ -2,4 +2,42 @@ extends base
 block content
   .listing-detail.smart
     .listing-detail__row
-      
+      .listing-detail__main-container
+        .listing-detail__sub-container.smart.images
+          .listing-detail__main-header__container
+            .listing-detail__main-heading__container
+              h1.listing-detail__main-heading 2011 Blue Automatic VolksWagen Gol
+            .listing-detail__main-heading__location
+              h2 Nairobi
+              .listing-detail__main-heading__posted
+                h2 Added 2 Weeks ago
+            .brief-specs
+              small 119000km
+              span -
+              small Pertol
+              span -
+              small Automatic
+            .listing-detail__price-container
+              .listing-detail__price
+                Span Ksh780,000
+          .gallery
+            ul.gallary__preview
+              li.gallery__preview__image
+                img.gallery__image(src='/images/vehicles')
+              li.gallery__preview__image
+                img.gallery__image(src='/images/vehicles')
+              li.gallery__preview__image
+                img.gallery__image(src='/images/vehicles')
+              li.gallery__preview__image
+                img.gallery__image(src='/images/vehicles')
+              li.gallery__preview__image
+                img.gallery__image(src='/images/vehicles')
+        .listing-detail__sub-container.description
+          .description
+            small Description
+            p This offer is negotiable More vehicle at our Show room
+            
+        .listing-detail__sub-container.Features
+          
+          
+          
