--- a/views/base.pug
+++ b/views/base.pug
@@ -1,14 +1,14 @@
 doctype html
 html(lang="en")
   head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous")
-    link(rel="shortcut icon" href="/images/favicon.ico")
-    link(rel="stylesheet" href="/css/style.css")
-    link(rel="stylesheet" href="/css/utilities.css")
-    link(rel="stylesheet" href="/css/detailV.css")
-    title ExJpConnect | #{title}
+    block head
+      meta(charset="UTF-8")
+      meta(name="viewport" content="width=device-width, initial-scale=1.0")
+      link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous")
+      link(rel="shortcut icon" href="/images/favicon.ico")
+      link(rel="stylesheet" href="/css/style.css")
+      link(rel="stylesheet" href="/css/utilities.css")
+      title ExJpConnect | #{title}
   body
     //Header
     include _header
@@ -16,8 +16,12 @@ html(lang="en")
     block content
     // Footer
     include _footer
+    
+    
     //- script(src='/js/script.js')
     //- script(src='/js/login.js')
     
-    script(src='/js/bundle.js')
+    
+    //-script(src='/js/bundle.js') 
+    
     
