--- a/views/base.pug
+++ b/views/base.pug
@@ -1,14 +1,14 @@
 doctype html
 html(lang="en")
   head
-    block head
-      meta(charset="UTF-8")
-      meta(name="viewport" content="width=device-width, initial-scale=1.0")
-      link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous")
-      link(rel="shortcut icon" href="/images/favicon.ico")
-      link(rel="stylesheet" href="/css/style.css")
-      link(rel="stylesheet" href="/css/utilities.css")
-      title ExJpConnect | #{title}
+    meta(charset='UTF-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    meta(http-equiv='X-UA-Compatible' content='ie=edge')
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css' integrity='sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==' crossorigin='anonymous')
+    link(rel='shortcut icon' href='images/favicon.ico')
+    link(rel='stylesheet' href='css/utilities.css')
+    link(rel='stylesheet' href='css/style.css')
+    title ExJpConnect | #{title}
   body
     //Header
     include _header
