updated nav section

--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,14 +1,13 @@
 .navbar
   .container.flex
     h1.logo
-      a(href='/') ExJpLimited
-    nav.nav
+      span
+        a(href='/') ExJpLimited
+    nav
       ul
         li
           a(href='/overview') Inventory
         li
-          a(href='/about') About
+          a(href='/about') About us
         li
-          a(href='/imports') Imports
-        li
-          a(href='/contact') Contact
+          a(href='/contact') Contact us
